--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,18 @@
     </string>
     <string name="open" />
     <string name="close" />
-    <string name="email_address">Email Address</string>
+
     <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="signup">SignUp</string>
+
+
     <string name="mobile_number">Mobile Number</string>
+
+
+    <string name="signup">SignUp</string>
+    <string name="password">Password</string>
+    <string name="EmailID">Email-ID</string>
+    <string name="login">login</string>
+    <string name="email_address">Email Address</string>
+
+
 </resources>
