Now the confirm button and back button in routine create is working properly, now empty routines will not be created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="login">login</string>
     <string name="email_address">Email Address</string>
     <string name="title_activity_assignment_view">AssignmentView</string>
+    <string name="tnameerror">Enter Valid Task Name</string>
 
 
 </resources>
