--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ReachOnTime</string>
+    <string name="app_name">BeOnTime</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
 
@@ -21,7 +21,7 @@
     <string name="passworderror">Enter Password of Minimum 6 length</string>
 
     <string name="username">Username</string>
-
+    <string name="time">Please pick up the time in this field</string>
 
     <string name="mobile_number">Mobile Number</string>
 
